--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -31,6 +31,9 @@ spec:
             - name: http
               containerPort: 80
               protocol: TCP
+          env:
+          - name: Elsa__Server__BaseAddress
+            value: "{{ .Values.env.baseaddress }}
           livenessProbe:
             httpGet:
               path: /
